<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="Clear">AC</string>
    <string name="Add">+</string>
    <string name="Sub">-</string>
    <string name="Multiply">×</string>
    <string name="Divide">÷</string>
    <string name="Tip">TIP</string>
    <string name="Answer">=</string>
    <string name="Delete"></string>
    <string name="Bracket">( )</string>
    <string name="Dot">.</string>

</resources>