<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/tableLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout"
        app:srcCompat="@drawable/calci_background">

    </ImageView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:backgroundTint="#170103"
                android:onClick="Clear_bt"
                android:text="@string/Clear"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/Delete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:backgroundTint="#010812"
                android:onClick="Delete_bt"
                app:srcCompat="@drawable/backspace" />

            <Button
                android:id="@+id/Tip"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:backgroundTint="#020d1c"
                android:onClick="Tip_bt"
                android:text="@string/Tip"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="Divide_bt"
                android:text="@string/Divide"
                android:textColor="#4d4d00"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="seven_bt"
                android:text="@string/seven"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="eight_bt"
                android:text="@string/eight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="nine_bt"
                android:text="@string/nine"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="Multiply_bt"
                android:text="@string/Multiply"
                android:textColor="#4d4d00"

                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="four_bt"
                android:text="@string/four"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="five_bt"
                android:text="@string/five"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="six_bt"
                android:text="@string/six"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="Add_bt"
                android:text="@string/Add"
                android:textColor="#4d4d00"

                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/One"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="one_bt"
                android:text="@string/one"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="two_bt"
                android:text="@string/two"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="three_bt"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Sub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="Sub_bt"
                android:text="@string/Sub"
                android:textColor="#616100"

                android:textSize="30sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/Dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="Dot_bt"
                android:text="@string/Dot"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="zero_bt"
                android:text="@string/zero"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Bracket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:onClick="Brackets_bt"
                android:text="@string/Bracket"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bt_ripple"
                android:backgroundTint="#2c3625"
                android:onClick="Equal_bt"
                android:text="@string/Answer"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="4dp"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
            />

    <TextView
        android:id="@+id/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="4dp"
        android:maxLines="1"
        android:textColor="#FF0000"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>